Fixed many bugs
- fixed API key config.js bug not showing in app.js

- fixed styles.css typo

- fixed index.html code block switch

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -44,7 +44,7 @@ main {
 #datepicker {
     box-sizing: border-box;
     width: 9rem;
-    padding: 00.2rem;
+    padding: 0.2rem;
     border-radius: 0.5rem;
 }
 
